--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,5 +40,7 @@ jobs:
           build_dir: dist
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} 
+      - name: Metrics embed
+        uses: lowlighter/metrics@v3.34
 permissions:
   contents: write
