--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -38,7 +38,18 @@ jobs:
           base: ""
           plugin_languages: yes
           plugin_languages_ignored: >-
-            jupyter notebook, html, css, less, dockerfile, makefile,
-            qmake, lex, cmake, shell, gnuplot
+            jupyter notebook, html, css, less, dockerfile, makefile, qmake, cmake, gnuplot
           plugin_languages_details: bytes-size, percentage
           plugin_languages_limit: 10
+      - uses: lowlighter/metrics@latest
+        with:
+          filename: metrics.plugin.languages.indepth.svg
+          token: ${{ secrets.METRICS_TOKEN }}
+          base: ""
+          plugin_languages: yes
+          plugin_languages_ignored: >-
+            html, css, less, dockerfile, makefile, qmake, cmake, gnuplot
+          plugin_languages_indepth: yes
+          plugin_languages_details: lines, bytes-size, percentage
+          plugin_languages_limit: 30
+          plugin_languages_threshold: 2%
