--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -33,23 +33,12 @@ jobs:
           plugin_isocalendar_duration: full-year
       - uses: lowlighter/metrics@latest
         with:
-          filename: metrics.plugin.languages.details.svg
-          token: ${{ secrets.METRICS_TOKEN }}
-          base: ""
-          plugin_languages: yes
-          plugin_languages_ignored: >-
-            jupyter notebook, html, css, less, dockerfile, makefile, qmake, cmake, gnuplot
-          plugin_languages_details: bytes-size, percentage
-          plugin_languages_limit: 10
-      - uses: lowlighter/metrics@latest
-        with:
           filename: metrics.plugin.languages.indepth.svg
           token: ${{ secrets.METRICS_TOKEN }}
           base: ""
           plugin_languages: yes
           plugin_languages_ignored: >-
-            html, css, less, dockerfile, makefile, qmake, cmake, gnuplot
+            jupyter notebook, html, css, less, dockerfile, makefile, qmake, cmake, gnuplot
           plugin_languages_indepth: yes
-          plugin_languages_details: lines, bytes-size, percentage
-          plugin_languages_limit: 30
-          plugin_languages_threshold: 2%
+          plugin_languages_details: lines, percentage
+          plugin_languages_limit: 20
