Add LeetCode metrics plugin to workflow

--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -35,3 +35,11 @@ jobs:
           plugin_languages_indepth: yes
           plugin_languages_details: lines, percentage
           plugin_languages_limit: 20
+      - uses: lowlighter/metrics@latest
+        with:
+          filename: metrics.plugin.leetcode.svg
+          token: NOT_NEEDED
+          base: ""
+          plugin_leetcode: yes
+          plugin_leetcode_user: KarimmYasser
+          plugin_leetcode_sections: solved, skills, recent
