--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -31,7 +31,7 @@ jobs:
           base: ""
           plugin_languages: yes
           plugin_languages_ignored: >-
-            jupyter notebook, html, css, less, dockerfile, makefile, qmake, cmake, gnuplot
+            jupyter notebook, html, css, less, dockerfile, makefile, qmake, cmake, gnuplot, tex, latex
           plugin_languages_indepth: yes
           plugin_languages_details: lines, percentage
           plugin_languages_limit: 20
